# cpp-utility

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/cpp-utility/compiler/: CompilerHints.hpp
src/cpp-utility/math/: Math.hpp
src/cpp-utility/perf/: Counter.hpp  PerfCounter.hpp  PerfEvent.hpp
src/cpp-utility/perf/definition/: CounterDefinition.hpp  DurationCounterDefinition.hpp  ExtendedCounterDefinition.hpp  PerfCounterDefinition.hpp
src/cpp-utility/std/: Hash.hpp  New.hpp  StreamOperator.hpp
src/cpp-utility/task/: Barrier.hpp  TaskQueue.hpp
test/: CMakeLists.txt
test/cpp-utility/perf/: CounterTest.cpp  PerfCounterTest.cpp  PerfTest.hpp
test/cpp-utility/task/: BarrierTest.cpp  TaskQueueTest.cpp
